networking/istio/virtualservice-api-gateway.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata: { name: api-gateway, namespace: streamvault }
spec:
  hosts: [api.streamvault.io]
  gateways: [streamvault-edge]
  http:
    - route:
        - { destination: { host: api-gateway, subset: stable }, weight: 90 }
        - { destination: { host: api-gateway, subset: canary }, weight: 10 }
